test/typeCheckTest/fail/test1.ic
class ParentBadReturn {
	int returnInt () {
		return 0;
	}
	
	void main (string [] args) {
	
	}
}

class ChildBadReturn extends ParentBadReturn {
	string returnInt () {
		return "I am bad";
	}
}